--- a/vela-templates/addons/fluxcd/definitions/kustomize.yaml
+++ b/vela-templates/addons/fluxcd/definitions/kustomize.yaml
@@ -122,7 +122,12 @@ spec:
                       email: "kubevelabot@users.noreply.github.com"
                       name: "kubevelabot"
                     }
-                    messageTemplate: "Update image automatically."
+                    if parameter.imageRepository.commitMessage != _|_ {
+                      messageTemplate: "Update image automatically.\n" + parameter.imageRepository.commitMessage
+                    }
+                    if parameter.imageRepository.commitMessage == _|_ {
+                      messageTemplate: "Update image automatically."
+                    }
                   }
                   push: branch: parameter.git.branch
                 }
@@ -185,6 +190,8 @@ spec:
               // +usage=Pattern specifies a regular expression pattern used to filter for image tags.
               pattern?: string
             }
+            // +usage=The image url
+            commitMessage?: string
           }
         	// +usage=The interval at which to check for repository/bucket and release updates, default to 5m
         	pullInterval: *"5m" | string
