Fix: generate service in canary-traffic trait
fix ci

Fix: apply remaing bug

fix ci

--- a/charts/vela-core/templates/addons/istio.yaml
+++ b/charts/vela-core/templates/addons/istio.yaml
@@ -82,6 +82,10 @@ data:
                                       }
                               }
                       }
+
+                      applyRemaining: op.#ApplyRemaining & {
+                          exceptions: [comp__]
+                      }
             type: raw
           - name: istio-gateway
             properties:
