--- a/vela-templates/addons/istio/definitions/canary-rollout-wf-def.yaml
+++ b/vela-templates/addons/istio/definitions/canary-rollout-wf-def.yaml
@@ -59,6 +59,10 @@ spec:
                 }
         }
 
+        applyRemaining: op.#ApplyRemaining & {
+            exceptions: [comp__]
+        }
+
 
 
 
