Fix: generate service in canary-traffic trait
fix ci

--- a/docs/examples/canary-rollout-use-case/first-deploy.yaml
+++ b/docs/examples/canary-rollout-use-case/first-deploy.yaml
@@ -20,7 +20,7 @@ spec:
 
 
       traits:
-        - type: expose
+        - type: canary-traffic
           properties:
             port:
             - 9080
