--- a/charts/vela-core/templates/definitions/terraform-alibaba-rds.yaml
+++ b/charts/vela-core/templates/definitions/terraform-alibaba-rds.yaml
@@ -16,11 +16,10 @@ spec:
     terraform:
       configuration: |
         module "rds" {
-          source = "github.com/zzxwill/terraform-alicloud-rds"
+          source = "terraform-alicloud-modules/rds/alicloud"
           engine = "MySQL"
           engine_version = "8.0"
           instance_type = "rds.mysql.c1.large"
-          instance_storage_type = "local_ssd"
           instance_storage = "20"
           instance_name = var.instance_name
           account_name = var.account_name
