--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -117,7 +117,7 @@ multicluster:
     port: 9443
     image:
       repository: oamdev/cluster-gateway
-      tag: latest
+      tag: v1.1.1
       pullPolicy: Always
     resource:
       limits:
