--- a/docs/examples/workflow/definition.yaml
+++ b/docs/examples/workflow/definition.yaml
@@ -9,35 +9,28 @@ spec:
         import ("vela/op")
         parameter: {
            component: string
-           serverIP?: string
+           prefixIP: string
         }
 
         // load component from application
-        component: op.#Load & {
-           component: parameter.component
-           value: {}
-        }
+        load: op.#Load
 
         // apply workload to kubernetes cluster
-        apply: op.#Apply & {
-           value: {
-              component.value.workload
-              metadata: name: parameter.component
-              if parameter.serverIP!=_|_{
-                 spec: containers: [{env: [{name: "PrefixIP",value: parameter.serverIP}]}]
-              }
+        apply: op.#ApplyComponent & {
+           value: load.value[parameter.component] & {
+                properties: serverIP: parameter.prefixIP
            }
         }
 
         // wait until workload.status equal "Running"
         wait: op.#ConditionalWait & {
-           continue: apply.value.status.phase =="Running"
+           continue: apply.output.status.phase =="Running"
         }
 ---
 apiVersion: core.oam.dev/v1beta1
 kind: WorkflowStepDefinition
 metadata:
-  name: apply-component
+  name: custom-apply-component
 spec:
   schematic:
     cue:
@@ -45,26 +38,23 @@ spec:
         import ("vela/op")
         parameter: {
            component: string
-           prefixIP?: string
         }
 
         // load component from application
-        component: op.#Load & {
-           component: parameter.component
-        }
+        load: op.#Load
 
         // apply workload to kubernetes cluster
         apply: op.#ApplyComponent & {
-           component: parameter.component
+            value: load.value[parameter.component]
         }
 
         // wait until workload.status equal "Running"
         wait: op.#ConditionalWait & {
-           continue: apply.workload.status.phase =="Running"
+           continue: apply.output.status.phase =="Running"
         }
 
         // export podIP
-        myIP: apply.workload.status.podIP
+        myIP: apply.output.status.podIP
 ---
 apiVersion: core.oam.dev/v1beta1
 kind: ComponentDefinition
@@ -82,6 +72,7 @@ spec:
       template: |
         parameter: {
           version: *"1.14.2" | string
+          serverIP?: string
         }
         output: {
           apiVersion: "v1"
@@ -95,6 +86,9 @@ spec:
                 name: "nginx"
                 image: "nginx:"+parameter.version
                 ports: [{containerPort: 80}]
+                if parameter.serverIP!=_|_{
+                    env: [{name: "PrefixIP",value: parameter.serverIP}]
+                }
             }]
           }
         }
