--- a/charts/vela-core/templates/addons/observability-asset.yaml
+++ b/charts/vela-core/templates/addons/observability-asset.yaml
@@ -25,7 +25,7 @@ data:
               kind: TraitDefinition
               metadata:
                 annotations:
-                  definition.oam.dev/description: Import one or more dashboards to Grafana
+                  definition.oam.dev/description: Import dashboards to Grafana
                 name: import-grafana-dashboard
                 namespace: vela-system
               spec:
