Fix: move charts from github repo to Alibaba Cloud OSS repo (#2324)
* Fix: move charts from github repo to Alibaba Cloud OSS repo

Charts in Github repo is not always avaialable for some users, so
moved them to OSS repo

Co-authored-by: Hongchao Deng <hongchaodeng1@gmail.com>

* Update charts/vela-core/templates/addons/observability-asset.yaml

Co-authored-by: Hongchao Deng <hongchaodeng1@gmail.com>

* Update vela-templates/addons/observability-asset/definitions/trait-import-grafana-dashboard.yaml

Co-authored-by: Hongchao Deng <hongchaodeng1@gmail.com>

* Update vela-templates/addons/auto-gen/observability-asset.yaml

Co-authored-by: Hongchao Deng <hongchaodeng1@gmail.com>

Co-authored-by: Hongchao Deng <hongchaodeng1@gmail.com>

--- a/vela-templates/addons/auto-gen/observability-asset.yaml
+++ b/vela-templates/addons/auto-gen/observability-asset.yaml
@@ -22,7 +22,7 @@ spec:
           kind: TraitDefinition
           metadata:
             annotations:
-              definition.oam.dev/description: Add a datasource to Grafana
+              definition.oam.dev/description: Import dashboards to Grafana
             name: import-grafana-dashboard
             namespace: vela-system
           spec:
