--- a/vela-templates/addons/observability-asset/definitions/trait-import-grafana-dashboard.yaml
+++ b/vela-templates/addons/observability-asset/definitions/trait-import-grafana-dashboard.yaml
@@ -2,7 +2,7 @@ apiVersion: core.oam.dev/v1beta1
 kind: TraitDefinition
 metadata:
   annotations:
-    definition.oam.dev/description: "Add a datasource to Grafana"
+    definition.oam.dev/description: "Import dashboards to Grafana"
   name: import-grafana-dashboard
   namespace: vela-system
 spec:
