Feat: add args for init-contianer and sidecar

--- a/charts/vela-core/templates/defwithtemplate/init-container.yaml
+++ b/charts/vela-core/templates/defwithtemplate/init-container.yaml
@@ -25,9 +25,15 @@ spec:
         		}]
         	}]
         	initContainers: [{
-        		name:    parameter.name
-        		image:   parameter.image
-        		command: parameter.command
+        		name:  parameter.name
+        		image: parameter.image
+        		if parameter.cmd != _|_ {
+        			command: parameter.cmd
+        		}
+        		if parameter.args != _|_ {
+        			args: parameter.args
+        		}
+
         		// +patchKey=name
         		volumeMounts: [{
         			name:      parameter.mountName
@@ -41,11 +47,25 @@ spec:
         	}]
         }
         parameter: {
-        	name:  string
+        	// +usage=Specify the name of init container
+        	name: string
+
+        	// +usage=Specify the image of init container
         	image: string
-        	command?: [...string]
-        	mountName:     *"workdir" | string
-        	appMountPath:  string
+
+        	// +usage=Specify the commands run in the init container
+        	cmd?: [...string]
+
+        	// +usage=Specify the args run in the init container
+        	args?: [...string]
+
+        	// +usage=Specify the mount name of shared volume
+        	mountName: *"workdir" | string
+
+        	// +usage=Specify the mount path of app container
+        	appMountPath: string
+
+        	// +usage=Specify the mount path of init container
         	initMountPath: string
         }
 
