--- a/charts/vela-core/templates/defwithtemplate/sidecar.yaml
+++ b/charts/vela-core/templates/defwithtemplate/sidecar.yaml
@@ -22,6 +22,9 @@ spec:
         		if parameter.cmd != _|_ {
         			command: parameter.cmd
         		}
+        		if parameter.args != _|_ {
+        			args: parameter.args
+        		}
         		if parameter["volumes"] != _|_ {
         			volumeMounts: [ for v in parameter.volumes {
         				{
@@ -41,6 +44,9 @@ spec:
 
         	// +usage=Specify the commands run in the sidecar
         	cmd?: [...string]
+
+        	// +usage=Specify the args in the sidecar
+        	args?: [...string]
 
         	// +usage=Specify the shared volume path
         	volumes?: [...{
