--- a/charts/vela-core/templates/cluster-gateway.yaml
+++ b/charts/vela-core/templates/cluster-gateway.yaml
@@ -52,6 +52,7 @@ spec:
       {{- end }}
 {{ end }}
 ---
+{{ if .Values.multicluster.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -64,7 +65,9 @@ spec:
     - protocol: TCP
       port: {{ .Values.multicluster.clusterGateway.port }}
       targetPort: {{ .Values.multicluster.clusterGateway.port }}
+{{ end }}
 ---
+{{ if .Values.multicluster.enabled }}
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
@@ -82,3 +85,4 @@ spec:
     port: {{ .Values.multicluster.clusterGateway.port }}
   versionPriority: 10
   insecureSkipTLSVerify: true
+{{ end }}
