Fix: support remote git repo for Terraform configuration
Besides inline HCL Configuration, supprted remote git repo Configuration

--- a/charts/oam-runtime/crds/core.oam.dev_traitdefinitions.yaml
+++ b/charts/oam-runtime/crds/core.oam.dev_traitdefinitions.yaml
@@ -195,6 +195,7 @@ spec:
                         enum:
                         - hcl
                         - json
+                        - remote
                         type: string
                     required:
                     - configuration
@@ -460,6 +461,7 @@ spec:
                         enum:
                         - hcl
                         - json
+                        - remote
                         type: string
                     required:
                     - configuration
