--- a/charts/vela-core/crds/core.oam.dev_workloaddefinitions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_workloaddefinitions.yaml
@@ -200,6 +200,7 @@ spec:
                         enum:
                         - hcl
                         - json
+                        - remote
                         type: string
                     required:
                     - configuration
@@ -446,6 +447,7 @@ spec:
                         enum:
                         - hcl
                         - json
+                        - remote
                         type: string
                     required:
                     - configuration
