--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_definitionrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_definitionrevisions.yaml
@@ -229,6 +229,7 @@ spec:
                                 enum:
                                 - hcl
                                 - json
+                                - remote
                                 type: string
                             required:
                             - configuration
@@ -498,6 +499,7 @@ spec:
                                 enum:
                                 - hcl
                                 - json
+                                - remote
                                 type: string
                             required:
                             - configuration
@@ -760,6 +762,7 @@ spec:
                                 enum:
                                 - hcl
                                 - json
+                                - remote
                                 type: string
                             required:
                             - configuration
@@ -1003,6 +1006,7 @@ spec:
                                 enum:
                                 - hcl
                                 - json
+                                - remote
                                 type: string
                             required:
                             - configuration
