--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_policydefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_policydefinitions.yaml
@@ -158,6 +158,7 @@ spec:
                         enum:
                         - hcl
                         - json
+                        - remote
                         type: string
                     required:
                     - configuration
