--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_workflowstepdefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_workflowstepdefinitions.yaml
@@ -155,6 +155,7 @@ spec:
                         enum:
                         - hcl
                         - json
+                        - remote
                         type: string
                     required:
                     - configuration
