Refactor: set rollout as a pointer reference
see issue #2289 for more details

Closes #2289

--- a/charts/vela-core/templates/addons/fluxcd.yaml
+++ b/charts/vela-core/templates/addons/fluxcd.yaml
@@ -6147,14 +6147,7 @@ data:
                       objects.\n\tpatchesStrategicMerge: [...#nestedmap]\n}\n\n#nestedmap:
                       {\n\t...\n}\n"
             type: raw
-        status:
-          rollout:
-            batchRollingState: ""
-            currentBatch: 0
-            lastTargetAppRevision: ""
-            rollingState: ""
-            upgradedReadyReplicas: 0
-            upgradedReplicas: 0
+        status: {}
       dependsOn:
       - ref:
           apiVersion: core.oam.dev/v1beta1
