--- a/pkg/controller/core.oam.dev/v1alpha2/application/assemble/testdata/filter_annotations.yaml
+++ b/pkg/controller/core.oam.dev/v1alpha2/application/assemble/testdata/filter_annotations.yaml
@@ -33,14 +33,7 @@ spec:
           properties:
             image: nginx
           type: webservice
-    status:
-      rollout:
-        batchRollingState: ""
-        currentBatch: 0
-        lastTargetAppRevision: ""
-        rollingState: ""
-        upgradedReadyReplicas: 0
-        upgradedReplicas: 0
+    status: {}
   applicationConfiguration:
     apiVersion: core.oam.dev/v1alpha2
     kind: ApplicationConfiguration
