--- a/charts/vela-core/templates/addons/ns-flux-system.yaml
+++ b/charts/vela-core/templates/addons/ns-flux-system.yaml
@@ -19,14 +19,7 @@ data:
               metadata:
                 name: flux-system
             type: raw
-        status:
-          rollout:
-            batchRollingState: ""
-            currentBatch: 0
-            lastTargetAppRevision: ""
-            rollingState: ""
-            upgradedReadyReplicas: 0
-            upgradedReplicas: 0
+        status: {}
     status:
       observedGeneration: 0
 kind: ConfigMap
