--- a/charts/vela-core/templates/addons/observability-asset.yaml
+++ b/charts/vela-core/templates/addons/observability-asset.yaml
@@ -107,14 +107,7 @@ data:
                       | string\n\tservice:                   string\n\tnamespace:                 *\"default\"
                       | string\n}\n"
             type: raw
-        status:
-          rollout:
-            batchRollingState: ""
-            currentBatch: 0
-            lastTargetAppRevision: ""
-            rollingState: ""
-            upgradedReadyReplicas: 0
-            upgradedReplicas: 0
+        status: {}
     status:
       observedGeneration: 0
 kind: ConfigMap
