--- a/charts/vela-core/templates/addons/observability.yaml
+++ b/charts/vela-core/templates/addons/observability.yaml
@@ -115,14 +115,7 @@ data:
                   tag: v2.1.0
               version: 3.4.1
             type: helm
-        status:
-          rollout:
-            batchRollingState: ""
-            currentBatch: 0
-            lastTargetAppRevision: ""
-            rollingState: ""
-            upgradedReadyReplicas: 0
-            upgradedReplicas: 0
+        status: {}
       dependsOn:
       - ref:
           apiVersion: core.oam.dev/v1beta1
