--- a/charts/vela-core/templates/addons/prometheus.yaml
+++ b/charts/vela-core/templates/addons/prometheus.yaml
@@ -19,14 +19,7 @@ data:
               repoType: helm
               url: https://prometheus-community.github.io/helm-charts
             type: helm
-        status:
-          rollout:
-            batchRollingState: ""
-            currentBatch: 0
-            lastTargetAppRevision: ""
-            rollingState: ""
-            upgradedReadyReplicas: 0
-            upgradedReplicas: 0
+        status: {}
       dependsOn:
       - ref:
           apiVersion: core.oam.dev/v1beta1
