--- a/vela-templates/addons/auto-gen/fluxcd.yaml
+++ b/vela-templates/addons/auto-gen/fluxcd.yaml
@@ -6144,14 +6144,7 @@ spec:
                   objects.\n\tpatchesStrategicMerge: [...#nestedmap]\n}\n\n#nestedmap:
                   {\n\t...\n}\n"
         type: raw
-    status:
-      rollout:
-        batchRollingState: ""
-        currentBatch: 0
-        lastTargetAppRevision: ""
-        rollingState: ""
-        upgradedReadyReplicas: 0
-        upgradedReplicas: 0
+    status: {}
   dependsOn:
   - ref:
       apiVersion: core.oam.dev/v1beta1
