--- a/vela-templates/addons/auto-gen/istio.yaml
+++ b/vela-templates/addons/auto-gen/istio.yaml
@@ -226,14 +226,7 @@ spec:
                   {\"app.oam.dev/revision\": context.revision}\n          }]\n       }\n}\n\nparameter:
                   {\n   port: [int]\n} \n"
         type: raw
-    status:
-      rollout:
-        batchRollingState: ""
-        currentBatch: 0
-        lastTargetAppRevision: ""
-        rollingState: ""
-        upgradedReadyReplicas: 0
-        upgradedReplicas: 0
+    status: {}
   dependsOn:
   - ref:
       apiVersion: core.oam.dev/v1beta1
