--- a/vela-templates/addons/auto-gen/keda.yaml
+++ b/vela-templates/addons/auto-gen/keda.yaml
@@ -15,14 +15,7 @@ spec:
           repoType: helm
           url: https://kedacore.github.io/charts
         type: helm
-    status:
-      rollout:
-        batchRollingState: ""
-        currentBatch: 0
-        lastTargetAppRevision: ""
-        rollingState: ""
-        upgradedReadyReplicas: 0
-        upgradedReplicas: 0
+    status: {}
   dependsOn:
   - ref:
       apiVersion: core.oam.dev/v1beta1
