--- a/vela-templates/addons/auto-gen/observability-asset.yaml
+++ b/vela-templates/addons/auto-gen/observability-asset.yaml
@@ -104,13 +104,6 @@ spec:
                   | string\n\tservice:                   string\n\tnamespace:                 *\"default\"
                   | string\n}\n"
         type: raw
-    status:
-      rollout:
-        batchRollingState: ""
-        currentBatch: 0
-        lastTargetAppRevision: ""
-        rollingState: ""
-        upgradedReadyReplicas: 0
-        upgradedReplicas: 0
+    status: {}
 status:
   observedGeneration: 0
