--- a/vela-templates/addons/auto-gen/prometheus.yaml
+++ b/vela-templates/addons/auto-gen/prometheus.yaml
@@ -16,14 +16,7 @@ spec:
           repoType: helm
           url: https://prometheus-community.github.io/helm-charts
         type: helm
-    status:
-      rollout:
-        batchRollingState: ""
-        currentBatch: 0
-        lastTargetAppRevision: ""
-        rollingState: ""
-        upgradedReadyReplicas: 0
-        upgradedReplicas: 0
+    status: {}
   dependsOn:
   - ref:
       apiVersion: core.oam.dev/v1beta1
